tests/invalid_scir_h/invalid_missing_await_effect.scirh
module invalid.missing_await_effect
async fn load fetch Callable -> int !
  return await fetch()
